<resources>
    <string name="app_name">Web Eye</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="url">url</string>
    <string name="name">name</string>
    <string name="periodicity_min">Periodicity (min)</string>
    <string name="add">add</string>
    <string name="add_link">add link</string>
    <string name="monitoring_list_is_empty">Monitoring list is empty</string>
    <string name="notifications">Notifications</string>
    <string name="app_notifications">App notifications</string>
    <string name="email_notifications">Email notifications</string>
    <string name="have_a_question_complaint_or_suggestion">Have a question, complaint or suggestion?</string>
    <string name="contact_us"><u>contact us</u></string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="no_results_found_yet">No results found yet</string>
    <string name="found_results">Found results:</string>
    <string name="sign_out"><u>sign out</u></string>
    <string name="application_version">Application version:</string>
    <string name="supported_markets">Supported markets:</string>
    <string name="market_olx">olx</string>
    <string name="account">Account</string>
    <string name="links">Links</string>
    <string name="always_observe_new_link">Always observe new link</string>
    <string name="data_storage">Data storage</string>
    <string name="use_remote_storage">Auto-backup</string>
    <string name="weltome_title">Welcome to Web Eye.\nPlease sign in or sign up if you don\'t have account yet.</string>
    <string name="observe_link">Observe link</string>
    <string name="you_have_no_saved_results_yet">You have no saved results yet</string>
    <string name="english">English</string>
    <string name="supported_languages">Supported languages:</string>
    <string name="invalid_data">Invalid data!</string>
    <string name="invalid_url">Invalid url</string>
    <string name="new_results_found">New results found!</string>
    <string name="found_results_count">Found %d new results for %s</string>
    <string name="settings_title">Settings</string>
    <string name="add_link_title">New link</string>
    <string name="app_info_title">App info</string>
    <string name="saved_results_title">Favorites</string>
    <string name="digit_warning">Password must contain al least one digit!</string>
</resources>
