<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.LoginActivity"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorDarkBlue"
        android:text="Welcome to Web Eye.\nPlease sign in or sign up if you don't have account yet."/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBlack"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button"/>

    </LinearLayout>

</LinearLayout>