<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/url_status_container"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="4dp"
        android:layout_marginHorizontal="24dp"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_clock"/>

        <TextView
            android:id="@+id/tv_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorDarkBlue"
            android:textSize="18sp"
            android:text="Waiting for url..."/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <com.example.market_observer_android.presentation.view.StyledEditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/url"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <com.example.market_observer_android.presentation.view.StyledEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/name"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/global_text_size"
                android:text="@string/periodicity_min"/>

            <Spinner
                android:id="@+id/spinner_periodicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <Switch
            android:id="@+id/switch_observe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observe_link"
            android:textSize="@dimen/global_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.market_observer_android.presentation.view.StyledButton
            android:id="@+id/btn_cancel_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <com.example.market_observer_android.presentation.view.StyledButton
            android:id="@+id/btn_add_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supported_markets"
            android:textSize="@dimen/global_text_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_add_link_market_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>